dataset1235/2025-2/2947369575/users/2007236882/executions/1003782500_2667036473.log
== RUN (2025-08-27 22:33:30)
-- CODE: 
tempC = float(input())
tempK = tempC + 273.15
print(round(tempK,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 22:33:11)
-- CODE: 
tempC = float(input())
tempK = tempC + 273.15
print(roud(tempK,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roud(tempK,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roud(tempK,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roud(tempK,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roud(tempK,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roud(tempK,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roud(tempK,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:33:13)
-- CODE: 
tempC = float(input())
tempK = tempC + 273.15
print(roud(tempK,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roud(tempK,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roud(tempK,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roud(tempK,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roud(tempK,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roud(tempK,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(roud(tempK,2))
          ^^^^
NameError: name 'roud' is not defined. Did you mean: 'round'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 22:33:32)
-- CODE: 
tempC = float(input())
tempK = tempC + 273.15
print(round(tempK,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
303.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
